# libqapt

./: CMakeLists.txt  QAptConfig.cmake.in
autotests/: CMakeLists.txt
debian/: .changelog.swp  changelog  control  copyright  gstreamer-qapt.install  gstreamer-qapt.postinst  gstreamer-qapt.prerm  kde-thumbnailer-deb.install  libqapt-dev.install  libqapt3-runtime.install  libqapt3-runtime.lintian-overrides  libqapt3-runtime.postinst  libqapt3-runtime.postrm  libqapt3.conf  libqapt3.install  libqapt3.symbols  plasma-runner-installer.install  qapt-batch.install  qapt-deb-installer.install  rules  watch
debian/patches/: 0001-add-zh_CN-translate.patch  0001-fix-long-description-error.patch  0001-fix-old-error-not-clear.patch  0003-add-unistd-header-fix-arm64-error.patch  0004-fix-long-description-error.patch  deepin_writeFileToDisk_whitelist.patch  deepin_writeFileToDisk_whitelist_2.patch  series  uniontech0001_add_interface_setting_environment_variables.patch  uniontech0002_change_authentication.patch  uniontech0003_add_interface_get_provides_version.patch  uniontech0004_add_feature_get_dpkg_errordetails.patch  uniontech0005_transaction_dbus_no_timeout.patch  uniontech0006_dbus_security_standard.patch  uniontech0007_script_ignore_error.patch
po/ar/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/ast/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/bs/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/ca/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/ca@valencia/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/cs/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/da/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/de/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/el/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/en_GB/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/eo/: qaptbatch.po
src/: CMakeLists.txt  debfile.cpp  globals.h  package.cpp  package.h  transaction.cpp  transaction.h
utils/plasma-runner-installer/: CMakeLists.txt
utils/qapt-batch/: CMakeLists.txt
utils/qapt-deb-installer/: CMakeLists.txt
utils/qapt-deb-thumbnailer/: CMakeLists.txt
utils/qapt-gst-helper/: CMakeLists.txt
(+154 files in other folders)
